# ru_practice

./: .env  Cargo.toml  README.md
migrations/2021-03-10-135045_create_nouns/: down.sql  up.sql
src/: gui.rs  lib.rs  local_dec_tables.rs  main.rs  models.rs  schema.rs  wiki_api.rs
src/glade/: ru_practice.glade
