[package]
name = "ru_practice"
version = "0.1.0"
authors = ["brianch <brianch@users.noreply.github.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = "1.0.26"
serde_derive = "1.0.26"
kuchiki = "0.6.0"
gio = "0.3.0"

[dependencies.gtk]
version = "0.3.0"
features = ["v3_10"]
